style: delete magic number