@@ -2,6 +2,9 @@ package blackjack.domain;
 
 public class Player extends Participant {
 
+    private static final String PLAYER_NAME_EMPTY_ERROR_MESSAGE = "[ERROR] 플레이어 이름에 빈 값이 올 수 없습니다.";
+    private static final String PLAYER_NAME_BLANK_ERROR_MESSAGE = "[ERROR] 이름은 공백만 올 수 없습니다.";
+
     private final String name;
 
     public Player(String name) {
@@ -10,14 +13,21 @@ public class Player extends Participant {
     }
 
     private void validateName(String name) {
-        if (name == null || name.isEmpty()) {
-            throw new IllegalArgumentException("[ERROR] 플레이어 이름에 빈 값이 올 수 없습니다.");
-        }
+        checkNullAndEmpty(name);
+        //checkBlank(name);
+
     }
 
-//        private void hasBlankNames(List<String> playerNames) {
-//        if(playerNames.stream().anyMatch(x -> x.trim().isEmpty())) {
-//            throw new IllegalArgumentException("[ERROR] 이름은 공백만 올 수 없습니다.");
+
+    private void checkNullAndEmpty(String name) {
+        if (name == null || name.isEmpty()) {
+            throw new IllegalArgumentException(PLAYER_NAME_EMPTY_ERROR_MESSAGE);
+        }
+    }
+//
+//    private void checkBlank(String name) {
+//        if (name.isBlank()) {
+//            throw new IllegalArgumentException(PLAYER_NAME_BLANK_ERROR_MESSAGE);
 //        }
 //    }
 
